[package]
name = "random-chess"
version = "0.1.0"
authors = ["Zack Noyes <u6867384@anu.edu.au>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.63"
chess = "3.2.0"
web-sys = { version = "0.3.64", features = ["console", "Location", "Window"] }
fixed = "1.23.1"
ansi_term = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
either = "1.8.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
